baseline for whole workflow, including assign label, build model and evaulate

--- a/PreprocessData/ivy.xml
+++ b/PreprocessData/ivy.xml
@@ -19,5 +19,7 @@
        <dependency org="prom" name="GraphViz" rev="latest" changing="true" transitive="true" />
        <dependency org="prom" name="AcceptingPetriNet" rev="latest" changing="true" transitive="true" />
        <dependency org="prom" name="InductiveMiner" rev="latest" changing="true" transitive="true" />
+       <dependency org="prom" name="ModelRepair" rev="latest" changing="true" transitive="true" />
+       <dependency org="prom" name="KPIProcessEnhancementWorkflow" rev="latest" changing="true" transitive="true" />
     </dependencies>
 </ivy-module>
