--- a/ProcessData/ivy.xml
+++ b/ProcessData/ivy.xml
@@ -15,5 +15,6 @@
        <dependency org="prom" name="GraphViz" rev="latest" changing="true" transitive="true" />
        <dependency org="prom" name="InductiveMinerDeprecated" rev="latest" changing="true" transitive="true" />
        <dependency org="prom" name="TransitionSystems" rev="latest" changing="true" transitive="true" />
+       <dependency org="prom" name="ModelRepair" rev="latest" changing="true" transitive="true" />
        </dependencies>
 </ivy-module>
