try to add efficient process tree editor

--- a/PreprocessData/ivy.xml
+++ b/PreprocessData/ivy.xml
@@ -19,6 +19,7 @@
        <dependency org="prom" name="GraphViz" rev="latest" changing="true" transitive="true" />
        <dependency org="prom" name="AcceptingPetriNet" rev="latest" changing="true" transitive="true" />
        <dependency org="prom" name="InductiveMiner" rev="latest" changing="true" transitive="true" />
+       <dependency org="prom" name="InductiveVisualMiner" rev="latest" changing="true" transitive="false" />
        <dependency org="prom" name="ModelRepair" rev="latest" changing="true" transitive="true" />
        <dependency org="prom" name="KPIProcessEnhancementWorkflow" rev="latest" changing="true" transitive="true" />
         <dependency org="prom" name="LogEnhancement" rev="latest" changing="true" transitive="true" />
