--- a/ProcessData/ivy.xml
+++ b/ProcessData/ivy.xml
@@ -13,6 +13,7 @@
     	<dependency org="prom" name="ProM-Plugins" rev="latest" changing="true" transitive="true" />
     	<dependency org="prom" name="Log" rev="latest" changing="true" transitive="true" />
        <dependency org="prom" name="GraphViz" rev="latest" changing="true" transitive="true" />
+       <dependency org="prom" name="InductiveVisualMiner" rev="latest" changing="true" transitive="false" />
        <dependency org="prom" name="InductiveMinerDeprecated" rev="latest" changing="true" transitive="true" /> 
      	<dependency org="prom" name="TransitionSystems" rev="latest" changing="true" transitive="true" />
        <dependency org="prom" name="ModelRepair" rev="latest" changing="true" transitive="true" />
